Trying to fix alignment of form
-Wrapped entire form content in a div called "right"
-Changed all form-row classes to form-input
-Added a class of right and left to each form-input div to help align
-Floated background img to the left for alignment and set the .right
class to display:flex.
-labels are set to display:block to have names stacked on top of the
input fields.

--- a/style.css
+++ b/style.css
@@ -2,17 +2,45 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-.content {
+/*Left side form content*/
+.content img {
+    float: left;
+    width: 525px;
+    height: 850px;
+}
+
+
+/*Right side form content */
+
+.right {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
-.form-row {
-    flex-direction: row;
-    align-items: flex-start;
-    /* To avoid stretching */
-    margin-bottom: 20px;
+label {
+    display: block;
+    border: 2px solid salmon;
+}
+
+.form-content {
+
+    border: 2px solid yellow;
+    margin-bottom: 16px;
+
+}
+
+.bottom-section {
+    border: 2px solid blue;
+}
+
+.sign-up-header {
+    border: 2px solid lawngreen;
+    margin-bottom: 15px;
+}
+
+div>label {
+    font-size: 0.7rem;
 }
